[MODORDERS-943] - Encumbrance status becomes "Unreleased" after changing fund distribution (#781)
(cherry picked from commit 96829c201442a4cc093f1a33badf3442694c83fc)